--- a/package.json
+++ b/package.json
@@ -34,7 +34,7 @@
   },
   "scripts": {
     "start": "react-scripts start",
-    "build": "react-scripts build && node scripts/cleanup-old-nav.js && node scripts/build-navigation.js",
+    "build": "CI=false react-scripts build && node scripts/cleanup-old-nav.js && node scripts/build-navigation.js",
     "build:nav": "node scripts/build-navigation.js",
     "cleanup:nav": "node scripts/cleanup-old-nav.js",
     "build:deploy": "npm run build && npm run deploy:prepare",
