--- a/.github/workflows/deploy.yml
+++ b/.github/workflows/deploy.yml
@@ -1,10 +1,13 @@
 name: Deploy to GitHub Pages
 
+# DISABLED: Currently using Cloudflare Pages for deployment
+# This workflow is kept for reference but disabled to avoid permission errors
 on:
-  push:
-    branches: [ main ]
-  pull_request:
-    branches: [ main ]
+  workflow_dispatch:  # Only runs manually, not on push
+  # push:
+  #   branches: [ main ]
+  # pull_request:
+  #   branches: [ main ]
 
 jobs:
   build-and-deploy:
