--- a/workers/wrangler.toml
+++ b/workers/wrangler.toml
@@ -6,8 +6,10 @@ compatibility_date = "2024-01-01"
 # The main file path is relative to this directory
 
 # Route configuration
-# This will be set up in the Cloudflare dashboard after deployment
-# Route: segmentor.pages.dev/api/user-permissions
+# Route for the API endpoint
+routes = [
+  { pattern = "segmentor.pages.dev/api/user-permissions", zone_name = "segmentor.pages.dev" }
+]
 
 # Environment variables (if needed in the future)
 # [vars]
