--- a/workers/wrangler.toml
+++ b/workers/wrangler.toml
@@ -7,10 +7,10 @@ compatibility_date = "2024-01-01"
 
 # Route configuration
 # Route for the API endpoint
-# Note: For Pages.dev domains, use the pattern without zone_name
-routes = [
-  { pattern = "segmentor.pages.dev/api/user-permissions" }
-]
+# For Pages.dev domains, we'll configure the route in the Cloudflare dashboard instead
+# Routes are configured via: Domain → Workers Routes → Add Route
+# Pattern: segmentor.pages.dev/api/user-permissions
+# Service: segmentor
 
 # Environment variables (if needed in the future)
 # [vars]
