Add Brand+ authentication docs to .gitignore (internal only)

--- a/.gitignore
+++ b/.gitignore
@@ -32,3 +32,5 @@ AppData/
 # Private documentation (not for public repo)
 docs/development/deployment-architecture.md
 docs/development/domain-setup-guide.md
+docs/development/brand-plus-authentication-architecture.md
+docs/development/managing-brand-plus-users.md
