Fix About page width issues and protect audit documents

--- a/.gitignore
+++ b/.gitignore
@@ -34,3 +34,7 @@ docs/development/deployment-architecture.md
 docs/development/domain-setup-guide.md
 docs/development/brand-plus-authentication-architecture.md
 docs/development/managing-brand-plus-users.md
+
+# Temporary audit documents (internal use only)
+"Temp file Sharing with Cursor/about-page-audit-and-improvements.md"
+"Temp file Sharing with Cursor/about-page-final-audit-summary.md"
