--- a/package.json
+++ b/package.json
@@ -38,13 +38,13 @@
     "build:nav": "node scripts/build-navigation.js",
     "cleanup:nav": "node scripts/cleanup-old-nav.js",
     "build:deploy": "npm run build && npm run deploy:prepare",
-    "deploy:prepare": "mkdir -p public/tool && cp -r build/* public/tool/",
+    "deploy:prepare": "mkdir -p public/tool && rm -rf public/tool/* && cp -r build/* public/tool/",
     "deploy": "npm run build:deploy && git add . && git commit -m 'Deploy to GitHub Pages' && git push",
     "test": "jest --config jest.config.js",
     "test:watch": "jest --watch --config jest.config.js",
     "eject": "react-scripts eject"
   },
-  "homepage": ".",
+  "homepage": "/tool",
   "eslintConfig": {
     "extends": [
       "react-app",
