--- a/package.json
+++ b/package.json
@@ -34,11 +34,12 @@
   },
   "scripts": {
     "start": "react-scripts start",
-    "build": "CI=false react-scripts build && node scripts/cleanup-old-nav.js && node scripts/build-navigation.js",
+    "build": "set CI=false && react-scripts build && node scripts/cleanup-old-nav.js && node scripts/build-navigation.js && npm run deploy:prepare && npm run fix-root",
     "build:nav": "node scripts/build-navigation.js",
     "cleanup:nav": "node scripts/cleanup-old-nav.js",
     "build:deploy": "npm run build && npm run deploy:prepare",
     "deploy:prepare": "mkdir -p public/tool && rm -rf public/tool/* && cp -r build/* public/tool/",
+    "fix-root": "node scripts/fix-root-index.js",
     "deploy": "npm run build:deploy && git add . && git commit -m 'Deploy to GitHub Pages' && git push",
     "test": "jest --config jest.config.js",
     "test:watch": "jest --watch --config jest.config.js",
