Complete dev fix: Update .gitignore and remove prestart from package.json

--- a/.gitignore
+++ b/.gitignore
@@ -11,6 +11,12 @@
 # production
 /build
 
+# Development - ignore built React app in public/tool (created during build)
+/public/tool/index.html
+/public/tool/static
+/public/tool/asset-manifest.json
+/public/tool/index.html.redirect
+
 # misc
 .DS_Store
 .env.local
