--- a/package.json
+++ b/package.json
@@ -34,11 +34,12 @@
   },
   "scripts": {
     "start": "react-scripts start",
-    "build": "CI=false react-scripts build && node scripts/cleanup-old-nav.js && node scripts/build-navigation.js && npm run deploy:prepare && npm run fix-root",
+    "build": "CI=false react-scripts build && node scripts/cleanup-old-nav.js && node scripts/build-navigation.js && npm run deploy:prepare",
+    "build:win": "set CI=false && react-scripts build && node scripts/cleanup-old-nav.js && node scripts/build-navigation.js && npm run deploy:prepare",
     "build:nav": "node scripts/build-navigation.js",
     "cleanup:nav": "node scripts/cleanup-old-nav.js",
     "build:deploy": "npm run build && npm run deploy:prepare",
-    "deploy:prepare": "mkdir -p public/tool && rm -rf public/tool/* && cp -r build/* public/tool/",
+    "deploy:prepare": "mkdir -p build/tool && rm -rf build/tool/* && cp -r build/static build/tool/ && cp build/index.html build/tool/ && cp build/asset-manifest.json build/tool/ 2>/dev/null || true && cp build/manifest.json build/tool/ 2>/dev/null || true && cp build/logo*.png build/tool/ 2>/dev/null || true && cp build/favicon.ico build/tool/ 2>/dev/null || true",
     "fix-root": "node scripts/fix-root-index.js",
     "deploy": "npm run build:deploy && git add . && git commit -m 'Deploy to GitHub Pages' && git push",
     "test": "jest --config jest.config.js",
