Make build process cross-platform and fix static page structure
- Add cross-env for cross-platform CI=false environment variable
- Create deploy-prepare.js script using Node.js (replaces Unix shell commands)
- Fix missing body tags in about.html, faq.html, and contact.html
- Ensure navigation is properly injected into all static pages
- All build scripts now work on Windows, Mac, and Linux

--- a/package.json
+++ b/package.json
@@ -34,12 +34,11 @@
   },
   "scripts": {
     "start": "react-scripts start",
-    "build": "CI=false react-scripts build && node scripts/cleanup-old-nav.js && node scripts/build-navigation.js && npm run deploy:prepare",
-    "build:win": "set CI=false && react-scripts build && node scripts/cleanup-old-nav.js && node scripts/build-navigation.js && npm run deploy:prepare",
+    "build": "cross-env CI=false react-scripts build && node scripts/cleanup-old-nav.js && node scripts/build-navigation.js && npm run deploy:prepare",
     "build:nav": "node scripts/build-navigation.js",
     "cleanup:nav": "node scripts/cleanup-old-nav.js",
     "build:deploy": "npm run build && npm run deploy:prepare",
-    "deploy:prepare": "mkdir -p build/tool && rm -rf build/tool/* && cp -r build/static build/tool/ && node scripts/fix-tool-index.js && cp build/asset-manifest.json build/tool/ 2>/dev/null || true && cp build/manifest.json build/tool/ 2>/dev/null || true && cp build/logo*.png build/tool/ 2>/dev/null || true && cp build/favicon.ico build/tool/ 2>/dev/null || true && cp public/_redirects build/_redirects 2>/dev/null || true && cp build/about.html public/about.html 2>/dev/null || true && cp build/faq.html public/faq.html 2>/dev/null || true && cp build/contact.html public/contact.html 2>/dev/null || true && cp build/privacy.html public/privacy.html 2>/dev/null || true && cp build/terms.html public/terms.html 2>/dev/null || true && cp build/brand-plus.html public/brand-plus.html 2>/dev/null || true && cp build/404.html public/404.html 2>/dev/null || true && cp -r build/fonts public/ 2>/dev/null || true && cp -r build/icons public/ 2>/dev/null || true && cp -r build/assets public/ 2>/dev/null || true",
+    "deploy:prepare": "node scripts/deploy-prepare.js",
     "fix-root": "node scripts/fix-root-index.js",
     "deploy": "npm run build:deploy && git add . && git commit -m 'Deploy to GitHub Pages' && git push",
     "test": "jest --config jest.config.js",
@@ -78,6 +77,7 @@
     "@types/react-window": "^1.8.8",
     "@types/recharts": "^1.8.29",
     "autoprefixer": "^10.4.13",
+    "cross-env": "^10.1.0",
     "identity-obj-proxy": "^3.0.0",
     "jest": "^29.7.0",
     "jest-environment-jsdom": "^29.7.0",
